sjconf-libvirt (0.1.2~dev-1) UNRELEASED; urgency=low

  * New upstream release, closes: RXTX-244
  * Adapt the packaging to the new upstream API
  * Make myself the package maintainer
  * Switch to source format 3.0 (quilt)
  * Add a debian/watch file

 -- Nicolas Delvaux <nicolas.delvaux@smartjog.com>  Fri, 20 Sep 2013 10:54:37 +0200

sjconf-libvirt (0.1.1-1) unstable; urgency=low

  * New upstream release
  * Add myself to uploaders
  * Clean the debian/control file

 -- Nicolas Delvaux <nicolas.delvaux@smartjog.com>  Tue, 29 Jan 2013 18:38:53 +0100

sjconf-libvirt (0.1.0-1) unstable; urgency=low

  * Initial release. (Closes: #4500)

 -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Mon, 29 Aug 2011 14:26:39 +0200