@@ -2,19 +2,19 @@ Source: sjconf-libvirt
 Priority: optional
 Section: admin
 Maintainer: Nicolas Delvaux <nicolas.delvaux@smartjog.com>
-Build-Depends: cdbs (>= 0.4.43),
-	       debhelper (>= 7),
-	       txt2tags,
-	       python-central (>= 0.6)
-XS-Python-Version: >= 2.5
+Build-Depends: debhelper (>= 8),
+               python-all (>= 2.6.6-3~),
+               txt2tags
 Standards-Version: 3.9.1
 
 Package: sjconf-libvirt
 Architecture: all
 Pre-Depends: sjconf1 (>= 1.13.0)
-Depends: ${misc:Depends},
-	 ${python:Depends},
+Depends: python (>= 2.6.6-3+squeeze3~),
+# Explicitely set the python dependency because of an internal python backport
+# TODO drop when switching to Wheezy!
+#        ${python:Depends},
+         ${misc:Depends},
 	 libvirt-bin (>= 0.8)
-XB-Python-Version: ${python:Versions}
 Description: sjconf plugin for libvirt
  This package provides a plugin to manage libvirt using sjconf.
