@@ -1,12 +1,8 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-
 DEB_CONFIGURE_EXTRA_FLAGS := --without-sjconf
 
-PYTHON_PACKAGES := sjconf-libvirt
+%:
+	dh $@ --with python2
 
-$(patsubst %,binary-install/%,$(PYTHON_PACKAGES)) ::
-	dh_pycentral -p$(cdbs_curpkg)
